@@ -4,7 +4,8 @@ Version 1.2.0
 [*]Added beta style shorelines with sand and gravel. This will only generate in new worlds, and can be configured.
 [*]Added the ability to configure the size of oceans. This will only affect new worlds.
 [*]Added willow groves as a new swamp variant (witches, slimes, reeds).
-[*]Added icy peaks as a new mountain variant (emeralds).
+[*]Added icy peaks as a new mountain variant (emeralds, silverfish).
+[*]Added patagonia as a new plains variant (villages, pumpkins) which spawns occasional tall, stony mountains. Emeralds and silverfish may spawn under the mountains.
 [*]Changed skylands cloud height to render below the bottom of the world (reduced y level from 8 to -8).
 [*]Fixed an issue where reeds could not generate along rivers in jungles.
 [*]Fixed an issue in the create world menu where buttons would overlap on low resolution screens or at very high GUI scales.
